<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
  <string name="app_name">Event Search</string>
  <string name="search">SEARCH</string>
  <string name="favorite">FAVORITE</string>
  <string name="event_search">Event Search</string>
  <string name="keyword_title">Keyword</string>
  <string name="keyword_placeholder">Enter keyword</string>
  <string name="category_title">Category</string>
  <string name="distance">Distance</string>
  <string name="from">From</string>
  <string name="current_location">Current location</string>
  <string name="other_specify_location">Other. Specify location</string>
  <string name="title_activity_result">ResultActivity</string>
  <string name="title_home">Home</string>
  <string name="title_dashboard">Dashboard</string>
  <string name="title_notifications">Notifications</string>
  <string name="type_image">Type Image</string>
  <string name="eventTitle">EVENT</string>
  <string name="artistTitle">ARTIST(S)</string>
  <string name="venueTitle">VENUE</string>
  <string name="upcomingTitle">UPCOMING</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="twitter">twitter</string>
  <string name="artist_team_s">Artist/Team(s)</string>
</resources>
