<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">
  <data class="FormDataBinding">
    <import type="android.view.View" />
    <variable name="viewModel"  type="csci571.hw9.FormViewModel" />
  </data>
<android.support.constraint.ConstraintLayout
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".Fragment.FormFragment">
  <TextView
    android:id="@+id/keywordTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:text="@string/keyword_title"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.051"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.016"/>
  <android.support.design.widget.TextInputLayout
    android:id="@+id/textInputLayout"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    app:hintEnabled="true"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintVertical_bias="0.120000005">

  </android.support.design.widget.TextInputLayout>
  <TextView
    android:id="@+id/categoryTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="313dp"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="313dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintVertical_bias="0.265"/>
  <AutoCompleteTextView
    android:id="@+id/autoCompleteTextView2"
    android:layout_width="340dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="21dp"
    android:layout_marginBottom="9dp"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="20dp"
    android:layout_marginLeft="24dp"
    android:layout_marginRight="20dp"
    android:text="@string/keyword_placeholder"
    app:layout_constraintBottom_toTopOf="@+id/categoryTitle"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/keywordTitle"
    app:layout_constraintVertical_bias="0.0"/>
  <TextView
    android:id="@+id/textView3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="14dp"
    android:layout_marginBottom="369dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="313dp"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="313dp"
    android:text="@string/category_title"
    app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/autoCompleteTextView2"
    app:layout_constraintVertical_bias="0.055"/>

</android.support.constraint.ConstraintLayout>
</layout>